@@ -1,3 +1,7 @@
+2006-07-11  Sebastien Bacher  <seb128@debian.org>
+
+	* Makefile.am: clean variables not used
+
 2006-07-06  Sergey Udaltsov <svu@gnome.org>
 
 	Fixing the build process
